# zfs

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  task.md
sn-article-template/: sn-article.aux  sn-article.fdb_latexmk  sn-article.fls  sn-article.tex  sn-bibliography.bib  ~$HUST_PPT_template_2022_RED_4x3.pptx
src/: allocator.cpp  allocator.h  fuse_layer.cpp  main.cpp  sha256.cpp  sha256.h  vdev.cpp  vdev.h  zfs.cpp  zfs.h  zfs_cow.cpp  zfs_resolve.cpp  zfs_structures.h  zpool.cpp  zpool.h
tests/: eval.cpp  test_allocator.cpp  test_vdev.cpp
